--- a/config/qtcurveconfigbase.ui
+++ b/config/qtcurveconfigbase.ui
@@ -276,7 +276,7 @@
                                     </sizepolicy>
                                 </property>
                                 <property name="text">
-                                    <string>draw line after title</string>
+                                    <string>draw line after title (KDE4 &amp;&amp; Gtk2)</string>
                                 </property>
                             </widget>
                         </hbox>
@@ -853,7 +853,7 @@ None - no buttons, only the slider</string>
                             <cstring>textLabel1_8_2_2_3_2</cstring>
                         </property>
                         <property name="text">
-                            <string>Selection appearance (KDE4 &amp; Gtk2):</string>
+                            <string>Selection appearance (KDE4 &amp;&amp; Gtk2):</string>
                         </property>
                     </widget>
                     <widget class="QComboBox" row="1" column="1">
